--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "form-data": "^4.0.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "lucide-react": "^0.294.0",
     "next": "14.0.3",
+    "nodemailer": "^6.9.7",
+    "postcss": "^8.4.32",
+    "puppeteer": "^24.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "lucide-react": "^0.294.0",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
-    "nodemailer": "^6.9.7",
-    "axios": "^1.6.2"
+    "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.9.2",
