--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.0.3",
     "nodemailer": "^6.9.7",
     "postcss": "^8.4.32",
-    "puppeteer": "^24.22.0",
+    "puppeteer-core": "^21.5.2",
+    "@sparticuz/chromium": "^119.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.6"
