--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,14 @@
     },
     "app/api/submit-lead/route.ts": {
       "maxDuration": 30
+    },
+    "app/api/download-pdf/[contactId]/route.ts": {
+      "maxDuration": 30
+    }
+  },
+  "build": {
+    "env": {
+      "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true"
     }
   }
 }
