Restore branded slide PDF generation with compatible Puppeteer and Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,12 @@
   },
   "build": {
     "env": {
-      "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true"
+      "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true",
+      "PUPPETEER_CACHE_DIR": "/tmp/.cache/puppeteer"
     }
+  },
+  "env": {
+    "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true",
+    "PUPPETEER_EXECUTABLE_PATH": "/usr/bin/google-chrome-stable"
   }
 }
