--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "form-data": "^4.0.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "puppeteer": "^19.11.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "nodemailer": "^6.9.7",
